k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nepremicnine-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/properties(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: properties-service
            port:
              number: 80
      - path: /api/images(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: image-service
            port:
              number: 80
